# satfolio

./: .editorconfig  .gitignore  .pretierrc  .prettierignore  CLAUDE.md  Cargo.toml  README.md  cliff.toml  eslint.config.ts  index.html  justfile  mise.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/: cliff-release.toml  dependabot.yml  release-body.md
.github/workflows/: ci.yaml  release.yaml
crates/core/: Cargo.toml
crates/core/bindings/: AssetAmount.ts  Candle.ts  DashboardStats.ts  EnrichedTrade.ts  ImportOutcome.ts  ImportPreview.ts  ImportRecord.ts  PositionSummary.ts  Provider.ts  TradeSide.ts  TradesSummary.ts
crates/core/examples/: analysis.rs  analyze.rs  engine.rs  import.rs  parse_csv.rs  parser.rs
crates/core/fixtures/: coinbase_sample.csv  kraken_overlap_a.csv  overlap_b.csv  sample.csv
crates/core/fixtures/kraken/: overlap_a_subset.csv  sample.csv
crates/core/fixtures/prices/: XBTEUR_1440.csv  XBTGBP_1440.csv  XBTUSD_1440.csv
crates/core/src/: analysis.rs  api.rs  context.rs  convert.rs  db.rs  engine.rs  error.rs  errors.rs  hash.rs  lib.rs  models.rs  parser.rs  price.rs
crates/core/src/parser/: coinbase.rs  kraken.rs
crates/core/tests/: import_dedup.rs
docs/: kraken-ledger-csv-format.md  specification.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/prices/: XBTEUR_1440.csv  XBTGBP_1440.csv  XBTUSD_1440.csv
src-tauri/src/: lib.rs
src/lib/: Counter.svelte  api.ts  mock.ts  types.ts  updater.svelte.ts  utils.ts  (+1 more)
(+52 files in other folders)
