[package]
name = "app"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
app-core = { path = "../crates/core" }
serde = { workspace = true }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
