[package]
name = "app-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
serde = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
rust_decimal = { version = "1", features = ["serde-str"] }
rust_decimal_macros = "1"
thiserror = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
sha2 = "0.10"
reqwest = "0.12"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
ts-rs = { version = "12", features = ["chrono-impl", "no-serde-warnings"] }
